# DashAIBrowser

./: .gitignore  IMPLEMENTATION-SUMMARY.md  README-multi-adapter.md  README.md
asol/: BUILD.gn
asol/Config/: BUILD.gn  asol_config.json
asol/adapters/: BUILD.gn  README.md  adapter_factory.cc  adapter_factory.h  adapter_interface.h
asol/adapters/Gemini/: BUILD.gn  gemini_http_client.cc  gemini_http_client.h  gemini_text_adapter.cc  gemini_text_adapter.h  gemini_text_adapter_unittest.cc  gemini_types.h
asol/adapters/claude/: BUILD.gn  claude_service_provider.cc  claude_service_provider.h  claude_text_adapter.cc  claude_text_adapter.h
asol/adapters/claude/test/: claude_text_adapter_unittest.cc
asol/adapters/copilot/: BUILD.gn  copilot_service_provider.cc  copilot_service_provider.h  copilot_text_adapter.cc  copilot_text_adapter.h
asol/adapters/copilot/test/: copilot_text_adapter_unittest.cc
asol/adapters/gemini/: BUILD.gn  gemini_service_provider.cc  gemini_service_provider.h  gemini_text_adapter.cc  gemini_text_adapter.h
asol/adapters/gemini/test/: BUILD.gn  gemini_text_adapter_unittest.cc
asol/adapters/openai/: BUILD.gn  openai_service_provider.cc  openai_service_provider.h  openai_text_adapter.cc  openai_text_adapter.h
asol/adapters/openai/test/: openai_text_adapter_unittest.cc
asol/browser/: BUILD.gn  asol_browser_integration.cc  asol_browser_integration.h  asol_browser_integration_unittest.cc  browser_features.cc  browser_features.h  page_context_extractor.cc  page_context_extractor.h  research_mode_controller.cc  research_mode_controller.h  side_panel_controller.cc  side_panel_controller.h  specialized_modes.cc  specialized_modes.h
asol/core/: BUILD.gn  ai_service_manager.h  ai_service_provider.h  api_gateway.cc  api_gateway.h  asol_integration_manager.cc  asol_integration_manager.h  config_loader.cc  config_loader.h  context_manager.h  echosphere_bridge.cc  echosphere_bridge.h  enhanced_security_manager.cc  enhanced_security_manager.h  local_ai_processor.h  multi_adapter_manager.cc  multi_adapter_manager.h  multi_model_orchestrator.h  multimodal_processor.cc  multimodal_processor.h  performance_tracker.cc  performance_tracker.h  privacy_proxy.h  service_manager.cc  service_manager.h  web3_integration.cc  web3_integration.h
asol/examples/: BUILD.gn  cache_example.cc  multi_adapter_example.cc  service_manager.cc  service_manager_unittest.cc
browser_core/: .keep  BUILD.gn  README.md  browser_ai_integration.cc  browser_ai_integration.h  browser_content_handler.cc  browser_content_handler.h  browser_features.cc  browser_features.h
browser_core/ai/: BUILD.gn  README.md  browser_ai_integration.cc  browser_ai_integration.h  content_understanding.h  multimedia_understanding.cc  multimedia_understanding.h  research_assistant.h  smart_suggestions.h  summarization_service.cc  summarization_service.h  voice_command_system.h
browser_core/ai/summarization/: synapse_button.cc
browser_core/app/: browser_main.cc  main.cc
browser_core/content/: content_extractor.cc  content_extractor.h
browser_core/engine/: browser_engine.cc  browser_engine.h  navigation_controller.h  navigation_controller_impl.h  tab.h  tab_impl.h  web_contents.h  web_contents_impl.h
browser_core/examples/: BUILD.gn  ai_menu_button_example.cc  ai_settings_example.cc  content_analysis_example.cc  contextual_manager_example.cc  memory_palace_example.cc  predictive_omnibox_example.cc  summarization_example.cc
browser_core/features/: summarization_feature.cc  summarization_feature.h
browser_core/security/: ai_phishing_detector.h  phishing_detector.h  privacy_manager.h  security_manager.h  zero_knowledge_sync.h
browser_core/ui/: BUILD.gn  README.md  adaptive_rendering_engine.cc  adaptive_rendering_engine.h  ai_provider_menu_button.cc  ai_provider_menu_button.h  ai_provider_selector.cc  ai_provider_selector.h  ai_settings_page.cc  ai_settings_page.h  contextual_manager.cc  contextual_manager.h  memory_palace.cc  memory_palace.h  predictive_omnibox.cc  predictive_omnibox.h  semantic_search.cc  semantic_search.h  summarization_ui.h
cmd/test_content_posting/: main.go
cmd/test_dds_ledger_integration/: main.go
cmd/test_gemini_adapter/: BUILD.gn  main.cc
cmd/test_user_profiles/: main.go
core/content/: publisher.go  publisher_test.go  retriever.go  retriever_test.go
core/identity/: keys.go  keys_test.go  wallet.go  wallet_test.go
core/ledger/: block.go  block_test.go  blockchain.go  blockchain_test.go  crypto_utils.go  crypto_utils_test.go  model.go  transaction.go  transaction_test.go
core/social/: post.go  post_manager.go  post_manager_test.go  post_test.go
core/user/: profile.go  profile_manager.go  profile_manager_test.go  profile_test.go
dashai-browser/: .gitignore  CMakeLists.txt  README.md
dashai-browser/asol/: Cargo.toml
dashai-browser/asol/adapters/gemini/: BUILD.gn  gemini_text_adapter.cc  gemini_text_adapter.h
dashai-browser/asol/client/: BUILD.gn  asol_client_main.cc
dashai-browser/asol/cpp/: BUILD.gn  asol_gateway_server.cc  asol_gateway_server.h  asol_manager.cc  asol_manager.h  asol_service_impl.cc  asol_service_impl.h  main.cc
dashai-browser/asol/cpp/utils/: BUILD.gn  curl_http_client.cc  curl_http_client.h  network_request_util.cc  network_request_util.h  placeholder_http_client.cc  placeholder_http_client.h
dashai-browser/browser_core/: CMakeLists.txt
dashai-browser/proto/: BUILD.gn  asol_service.proto
docs/: architecture.md  asol_architecture.md  browser_integration.md  code_quality_guidelines.md  competitive_features.md  implementation_summary.md  optimization_strategy.md  performance_optimization.md  research_mode.md  specialized_modes.md  ui_integration.md
proto/: BUILD.gn
tests/integration/: BUILD.gn  gemini_adapter_integration_test.cc  multi_adapter_integration_test.cc
