# Copyright 2025 The DashAIBrowser Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")

# Copy the configuration files to the output directory
copy("config_files") {
  sources = [
    "asol_config.json",
  ]
  
  outputs = [
    "$root_out_dir/asol_config.json",
  ]
}

group("config") {
  deps = [
    ":config_files",
  ]
}
