# Copyright 2025 The DashAIBrowser Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")

source_set("adapter_interface") {
  sources = [
    "adapter_interface.h",
    "adapter_factory.cc",
  ]

  deps = [
    "//base",
  ]
}

group("adapters") {
  deps = [
    ":adapter_interface",
    "gemini:gemini_adapter",
    # Additional adapters will be added here
  ]
}