# Copyright 2025 The DashAIBrowser Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("adapters") {
  deps = [
    "//asol/adapters/gemini",
    "//asol/adapters/openai",
    "//asol/adapters/copilot",
    "//asol/adapters/claude",
    ":adapter_factory",
  ]
}

source_set("adapter_factory") {
  sources = [
    "adapter_factory.cc",
    "adapter_factory.h",
  ]

  deps = [
    "//asol/adapters/gemini",
    "//asol/adapters/openai",
    "//asol/adapters/copilot",
    "//asol/adapters/claude",
    "//asol/core",
    "//base",
  ]
}

group("tests") {
  testonly = true
  deps = [
    "//asol/adapters/gemini:tests",
    "//asol/adapters/openai:tests",
    "//asol/adapters/copilot:tests",
    "//asol/adapters/claude:tests",
  ]
}