# Copyright 2025 The DashAIBrowser Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")

source_set("browser") {
  sources = [
    "asol_browser_integration.cc",
    "asol_browser_integration.h",
    "browser_features.cc",
    "browser_features.h",
    "page_context_extractor.cc",
    "page_context_extractor.h",
    "research_mode_controller.cc",
    "research_mode_controller.h",
    "side_panel_controller.cc",
    "side_panel_controller.h",
    "specialized_modes.cc",
    "specialized_modes.h",
  ]

  deps = [
    "//asol/adapters:adapter_interface",
    "//asol/core:core",
    "//asol/ui:ui",
    "//asol/util:util",
    "//base",
    "//components/side_panel",
    "//content/public/browser",
    "//ui/base",
    "//ui/gfx",
    "//ui/views",
  ]
}

# Unit tests for the browser integration
source_set("unittests") {
  testonly = true
  
  sources = [
    "asol_browser_integration_unittest.cc",
  ]
  
  deps = [
    ":browser",
    "//asol/test:test_support",
    "//base",
    "//base/test:test_support",
    "//content/public/browser",
    "//content/test:test_support",
    "//testing/gtest",
    "//testing/gmock",
  ]
}