# Copyright 2025 The DashAIBrowser Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("core") {
  sources = [
    "ai_service_provider.h",
    "multi_adapter_manager.cc",
    "multi_adapter_manager.h",
  ]

  deps = [
    "//base",
  ]
}