# Copyright 2025 The DashAIBrowser Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("multi_adapter_example") {
  sources = [
    "multi_adapter_example.cc",
  ]

  deps = [
    "//asol/adapters",
    "//asol/adapters:adapter_factory",
    "//asol/core",
    "//base",
  ]
}

executable("cache_example") {
  sources = [
    "cache_example.cc",
  ]

  deps = [
    "//asol/adapters",
    "//asol/adapters:adapter_factory",
    "//asol/core",
    "//base",
  ]
}