# Copyright 2025 The DashAIBrowser Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("test_gemini_adapter") {
  sources = [
    "main.cc",
  ]
  deps = [
    "//asol/adapters/gemini:gemini_adapter",
    "//base",
  ]
}