[package]
name = "asol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Add dependencies for AI service orchestration, e.g.:
# reqwest = { version = "0.11", features = ["json"] }
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1.0", features = ["derive"] }
# prost = "0.11" # For Protocol Buffers if used via proto/

# Placeholder for future dependencies
# log = "0.4"

# [build-dependencies]
# prost-build = "0.11" # If compiling .proto files for Rust gRPC/protobuf services
