cmake_minimum_required(VERSION 3.10)
project(BrowserCore LANGUAGES CXX)

# Add source files for the browser core library
# file(GLOB BROWSER_CORE_SOURCES "*.cpp" "*.h")

# Example: Add a library for the browser core
# add_library(browser_core_lib STATIC ${BROWSER_CORE_SOURCES})

# Public include directories for browser_core_lib
# target_include_directories(browser_core_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

# Link dependencies (e.g., Chromium Embedded Framework, other libraries)
# target_link_libraries(browser_core_lib PRIVATE OtherLibs::OtherLib)

# Placeholder for future source files and targets
# message(STATUS "BrowserCore CMakeLists.txt configured.")
