# Copyright 2025 The DashAIBrowser Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")

source_set("gemini_adapter") {
  sources = [
    "gemini_http_client.cc",
    "gemini_http_client.h",
    "gemini_text_adapter.cc",
    "gemini_text_adapter.h",
    "gemini_types.h",
  ]

  deps = [
    "//base",
    "//net",
    "//services/network:network_service",
    "//services/network/public/cpp",
    "//third_party/nlohmann_json",
    "//asol/adapters:adapter_interface",
  ]

  # Additional dependencies that might be needed in the future
  # "//components/feed/core/v2:feed_util",
  # "//mojo/public/cpp/bindings",
  # "//mojo/public/mojom/base:time",
  # "//asol/proto:proto_messages",
}

# Unit tests for the Gemini adapter
source_set("unittests") {
  testonly = true
  
  sources = [
    "gemini_text_adapter_unittest.cc",
  ]
  
  deps = [
    ":gemini_adapter",
    "//asol/test:test_support",
    "//base",
    "//net",
    "//services/network:test_support",
    "//services/network/public/cpp",
    "//testing/gtest",
    "//testing/gmock",
    "//third_party/nlohmann_json",
  ]
}
