# Copyright 2025 The DashAIBrowser Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("copilot") {
  sources = [
    "copilot_service_provider.cc",
    "copilot_service_provider.h",
    "copilot_text_adapter.cc",
    "copilot_text_adapter.h",
  ]

  deps = [
    "//asol/core",
    "//base",
    "//third_party/nlohmann_json",
  ]
}

source_set("tests") {
  testonly = true
  sources = [
    "test/copilot_text_adapter_unittest.cc",
  ]

  deps = [
    ":copilot",
    "//base",
    "//base/test:test_support",
    "//testing/gtest",
    "//third_party/nlohmann_json",
  ]
}